--- a/src/views/index.html
+++ b/src/views/index.html
@@ -132,5 +132,76 @@
         </div>
       </div>
     </section>
+    <section class="section testimonials testimonials__contenedor">
+      <picture class="testimonials__picture">
+        <source srcset="./assets/img/app.avif" type="image/avif" />
+        <source srcset="./assets/img/app.webp" type="image/webp" />
+        <img
+          class="testimonials__img"
+          loading="lazy"
+          width="500"
+          height="300"
+          src="./assets/img/app.jpg"
+          alt="Imagem-App"
+        />
+      </picture>
+      <div class="testimonials__contenido">
+        <h2 class="testimonials__titulo">Testimonios</h2>
+        <div class="testimonial-card">
+          <p class="testimonial-card__paragraph">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Porro aut
+            autem iste sapiente eum in sit cumque, ad similique, non, molestiae
+          </p>
+        </div>
+        <div class="testimonial-card">
+          <p class="testimonial-card__paragraph">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Porro aut
+            autem iste sapiente eum in sit cumque, ad similique, non, molestiae
+          </p>
+        </div>
+        <div class="testimonial-card">
+          <p class="testimonial-card__paragraph">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Porro aut
+            autem iste sapiente eum in sit cumque, ad similique, non, molestiae
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <footer class="footer ">
+      <div class="footer__grid footer__contenedor">
+        <div class="footer__widget">
+          <a href="index.html" class="logo">
+            <img class="logo__img" src="./assets/img/logo.svg" alt="logo" />
+          </a>
+        </div>
+        <div class="footer__widget">
+          <h3 class="footer__titulo">Soporte</h3>
+          <nav class="nav">
+            <a href="#" class="nav__link">Documentación</a>
+            <a href="#" class="nav__link">Precios</a>
+            <a href="#" class="nav__link">API</a>
+          </nav>
+        </div>
+        <div class="footer__widget">
+          <h3 class="footer__titulo">Soluciones</h3>
+          <nav class="nav">
+            <a href="#" class="nav__link">Soluciones</a>
+            <a href="#" class="nav__link">Gráficas</a>
+            <a href="#" class="nav__link">Distribución</a>
+          </nav>
+        </div>
+        <div class="footer__widget">
+          <h3 class="footer__titulo">Contacto</h3>
+          <nav class="nav">
+            <a href="#" class="nav__link">Contacto</a>
+            <a href="#" class="nav__link">FAQ</a>
+          </nav>
+        </div>
+      </div>
+      <p class="footer__copyright">
+        PodcastFM todos los derechos reservados &copy;
+      </p>
+    </footer>
   </body>
 </html>
