Corrección de errores

--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -22,10 +22,13 @@ h2 {
 
 h3 {
   font-size: 2.4rem;
+  text-align: center;
+  text-transform: uppercase;
+  margin: 0;
 }
 
 p {
-  font-size: 2rem;
+  font-size: 1.9rem;
   color: var.$black;
   line-height: 2;
   margin: 1rem 0;
