--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -29,8 +29,7 @@
   }
 
   &__titulo {
-    margin-top: 0;
-    text-transform: uppercase;
+    text-align: left;
     color: var.$primary-color;
   }
 
